# Flare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/shaders/: shader.vert  viewdisplay.frag
examples/: CMakeLists.txt  main.cpp  main.h
include/: libflare.h  library.h  uniform.h  vertex.h
src/: libflare.cpp  library.cpp  vertex.cpp
tools/: compile.bat  compile.sh
